syntax = "proto3";

package infra.v1;

import "infra/v1/common.proto";

option go_package = "github.com/kashguard/go-mpc-vault/internal/infra/grpc/v1;infra";

// KeyService 密钥服务
service KeyService {
  // 创建根密钥（执行DKG，2-of-3模式）
  rpc CreateRootKey(CreateRootKeyRequest) returns (CreateRootKeyResponse);
  
  // 获取根密钥信息
  rpc GetRootKey(GetRootKeyRequest) returns (GetRootKeyResponse);
  
  // 删除根密钥
  rpc DeleteRootKey(DeleteRootKeyRequest) returns (StatusResponse);
  
  // 列出根密钥
  rpc ListRootKeys(ListRootKeysRequest) returns (ListRootKeysResponse);
  
  // 派生钱包密钥（Hardened Derivation）
  rpc DeriveWalletKey(DeriveWalletKeyRequest) returns (DeriveWalletKeyResponse);
  
  // 获取钱包密钥信息
  rpc GetWalletKey(GetWalletKeyRequest) returns (GetWalletKeyResponse);
  
  // 删除钱包密钥
  rpc DeleteWalletKey(DeleteWalletKeyRequest) returns (StatusResponse);
  
  // 列出钱包密钥
  rpc ListWalletKeys(ListWalletKeysRequest) returns (ListWalletKeysResponse);
}

// CreateRootKeyRequest 创建根密钥请求
message CreateRootKeyRequest {
  string key_id = 1;      // 可选的密钥ID，如果为空则自动生成
  string algorithm = 2;  // ECDSA, EdDSA, Schnorr
  string curve = 3;      // secp256k1, secp256r1, ed25519
  string protocol = 4;   // gg18, gg20, frost
  int32 threshold = 5;   // 默认 2
  int32 total_nodes = 6; // 默认 3
  string description = 8;
  map<string, string> tags = 9;
}

// CreateRootKeyResponse 创建根密钥响应
message CreateRootKeyResponse {
  RootKeyMetadata key = 1;
}

// GetRootKeyRequest 获取根密钥请求
message GetRootKeyRequest {
  string key_id = 1;
}

// GetRootKeyResponse 获取根密钥响应
message GetRootKeyResponse {
  RootKeyMetadata key = 1;
}

// DeleteRootKeyRequest 删除根密钥请求
message DeleteRootKeyRequest {
  string key_id = 1;
}

// DeleteWalletKeyRequest 删除钱包密钥请求
message DeleteWalletKeyRequest {
  string wallet_id = 1;
}

// ListRootKeysRequest 列出根密钥请求
message ListRootKeysRequest {
  string status = 1;  // Active, Inactive, Deleted
  PaginationRequest pagination = 2;
}

// ListRootKeysResponse 列出根密钥响应
message ListRootKeysResponse {
  repeated RootKeyMetadata keys = 1;
  PaginationResponse pagination = 2;
}

// DeriveWalletKeyRequest 派生钱包密钥请求
message DeriveWalletKeyRequest {
  string root_key_id = 1;
  string chain_type = 2;  // bitcoin, ethereum, solana
  uint32 index = 3;
  string description = 4;
  map<string, string> tags = 5;
}

// DeriveWalletKeyResponse 派生钱包密钥响应
message DeriveWalletKeyResponse {
  WalletKeyMetadata wallet = 1;
}

// GetWalletKeyRequest 获取钱包密钥请求
message GetWalletKeyRequest {
  string wallet_id = 1;
}

// GetWalletKeyResponse 获取钱包密钥响应
message GetWalletKeyResponse {
  WalletKeyMetadata wallet = 1;
}

// ListWalletKeysRequest 列出钱包密钥请求
message ListWalletKeysRequest {
  string root_key_id = 1;
  string chain_type = 2;
  PaginationRequest pagination = 3;
}

// ListWalletKeysResponse 列出钱包密钥响应
message ListWalletKeysResponse {
  repeated WalletKeyMetadata wallets = 1;
  PaginationResponse pagination = 2;
}

// RootKeyMetadata 根密钥元数据
message RootKeyMetadata {
  string key_id = 1;
  string public_key = 2;
  string algorithm = 3;
  string curve = 4;
  int32 threshold = 5;
  int32 total_nodes = 6;
  string protocol = 7;
  string status = 8;
  string description = 9;
  map<string, string> tags = 10;
  string created_at = 11;
  string updated_at = 12;
  string deletion_date = 13;
}

// WalletKeyMetadata 钱包密钥元数据
message WalletKeyMetadata {
  string wallet_id = 1;
  string root_key_id = 2;
  string chain_type = 3;
  uint32 index = 4;
  string public_key = 5;
  string address = 6;
  string status = 7;
  string description = 8;
  map<string, string> tags = 9;
  string created_at = 10;
  string updated_at = 11;
  string deletion_date = 12;
}
